wordpress/svc_wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector: { app: wordpress, tier: frontend }
  ports:
    - name: http
      port: 80
      targetPort: 8080
